syntax = "proto3";

package cr8r.controller;

message PCreateAttachmentRequest {
    message PStart {
        string name = 1;
        uint64 size = 2;
    }

    message PUploadChunk {
        bytes data = 1;
    }

    message PCommit {
        //
    }

    oneof ty {
        PStart start = 1;
        PUploadChunk upload_chunk = 2;
        PCommit commit = 3;
    }
}

message PCreateAttachmentReply {
    string id = 1;
}
